@@ -1,5 +1,7 @@
 2007-01-28  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml.in: Move gfloppy manual into gnome-utils.
+
 	* releases.xml.in: Follow 2.18 module decisions.
 
 2007-01-28  Danilo Šegan  <danilo@gnome.org>
